--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
         <label for="bsb">BSB-Login</label><br>
         <input type="radio" id="lmu" name="loginType" value="LMU Login">
         <label for="lmu">LMU Login</label><br>
+        <input type="checkbox" id="morning" name="morning" value="morning">
+        <label for="morning">Morning</label><br>
+        <input type="checkbox" id="afternoon" name="afternoon" value="afternoon">
+        <label for="afternoon">Afternoon</label><br>
         <input type="submit" value="Submit">
     </form>
 </body>
